--- a/.emacs.d/README
+++ b/.emacs.d/README
@@ -3,3 +3,7 @@ This is Ian's attempt to learn Emacs.
 I've been told to go with GNU Emacs version 23 or greater.
 
 The best OS X port seems to be http://emacsformacosx.com/
+
+TODO:
+- Configure Viper
+- Use ELPA for package management
