--- a/.emacs.d/README
+++ b/.emacs.d/README
@@ -4,7 +4,10 @@ I've been told to go with GNU Emacs version 23 or greater.
 
 The best OS X port seems to be http://emacsformacosx.com/
 
+TIPS:
+- C-u 0 M-x byte-recompile-directory
+
 TODO:
 - Configure Viper
 - Use ELPA for package management
-- C-u 0 M-x byte-recompile-directory
+
