--- a/.emacs.d/README
+++ b/.emacs.d/README
@@ -3,3 +3,6 @@ This is Ian's attempt to learn Emacs.
 I've been told to go with GNU Emacs version 23 or greater.
 
 The best OS X port seems to be http://emacsformacosx.com/
+
+TIPS:
+- C-u 0 M-x byte-recompile-directory
