--- a/.emacs.d/README
+++ b/.emacs.d/README
@@ -8,6 +8,8 @@ TIPS:
 - C-u 0 M-x byte-recompile-directory
 
 TODO
+- Fix editing in CSS mode - ending lines with ; and }
 - Git mode
 - Support per-host local init file
 - Load ropemacs when Python is >2.5
+- Make M-; comment current line if region is inactive
